<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="activity_new_planet">HelloWorld - Create a planet</string>
    <string name="activity_config_planet">HelloWorld - Configure a planet</string>
    <string name="activity_attack_planet">HelloWorld - Attack a planet</string>
    <string name="activity_travel_planet">HelloWorld - Travel to a planet</string>
    <string name="activity_time_planet">HelloWorld - Earth Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="Planet_name">Planet Name: </string>
	<string name="Planet_mass">Planet Mass: </string>
	<string name="Planet_gravity">Planet Gravity: </string>
	<string name="Planet_colonies">Planet Colonies: </string>
	<string name="Planet_pop">Planet Population: </string>
	<string name="Planet_military">Planet Military: </string>
	<string name="Planet_bases">Planet Bases: </string>
	<string name="Planet_protected">Planet ForceField: </string>
	<string name="menu_add">Add planet</string>
	<string name="menu_config">Configure planet</string>
	<string name="menu_travel">Travel to planet</string>
	<string name="menu_attack">Attack a planet</string>
	<string name="menu_home">Return to home planet</string>
	<string name="content_desc_earth">Planet Earth</string>
	<string name="content_desc_mars">Planet Mars</string>
	<string name="content_desc_venus">Planet Venus</string>
	<string name="content_desc_jupiter">Planet Jupiter</string>
	<string name="content_desc_saturn">Planet Saturn</string>
	<string name="content_desc_neptune">Planet Neptune</string>
	<string name="button_colonies">Add Colonies</string>
	<string name="button_colonist">Add Colonists</string>
	<string name="button_bases">Add Bases</string>
	<string name="button_miltiary">Add Military</string>
	<string name="button_protected">Toggle ForceField</string>
	<string name="content_desc_bomb">Bomb the planet</string>
	<string name="content_desc_invade">invade the planet</string>
	<string name="content_desc_virus">infect the planet with virus</string>
	<string name="content_desc_laser">Fire laser at the planet</string>
	<string name="content_desc_exit">Finish attacking</string>
	<string name="done_config">Done</string>
	<string name="return_button">Return</string>
	<string name="addingText">Click to add planet</string>
	<string name="attackPlanetCaption">Choose how to attack!</string>
	<string name="attackPlanetBomb">Bomb the planet!</string>
	<string name="attackPlanetVirus">Infect the planet!</string>
	<string name="attackPlanetInvade">Invade the planet!</string>
	<string name="attackPlanetLaser">Fire Lasers at the planet!</string>
	<string name="exitAttack">Exit attacking</string>
	<string name="travel_button">Return Home</string>
	<string name="time_caption_value">Home Planet Earth Time</string>
	<string name="time_button_value">Return to Planet Configuration</string>
	<string name="button_name_time">Atomic Clock</string>
	<string name="start_button_value">Start Music</string>
	<string name="stop_button_value">Stop Music</string>
	<string name="timer_hint_value">Enter Number of Seconds</string>
	<string name="timer_button_value">Start Timer Countdown</string>
	<string name="activity_alien_contact">Hello World - Alien Contacts</string>
	<string name="find_alien_button_value">List Aliens in this Galaxy</string>
	<string name="add_spock_button_value">Add Spock to my Alliance</string>
	<string name="add_worf_button_value">Add Worf to my Alliance</string>
	<string name="menu_contact_planet">Make Alien Contact</string>
</resources>
