<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.helloworld.MainActivity" >

    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title="@string/menu_add"
        app:showAsAction="never"/>
    <item
        android:id="@+id/config"
        android:orderInCategory="200"
        android:title="@string/menu_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/travel"
        android:orderInCategory="300"
        android:title="@string/menu_travel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/attack"
        android:orderInCategory="400"
        android:title="@string/menu_attack"
        app:showAsAction="never"/>
    <item
        android:id="@+id/home"
        android:orderInCategory="500"
        android:title="@string/menu_home"
        app:showAsAction="never"/>
	<item 
	    android:id="@+id/contact"
	    android:orderInCategory="600"
	    android:title="@string/menu_contact_planet"
	    app:showAsAction="never" />
</menu>
