<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.MainActivity" 
    android:background="@drawable/galaxy"
	 >

	<TextView
        android:id="@+id/textview1"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_name"
        />
	<TextView
        android:id="@+id/dataview1"
        android:textColor="#FFFF99" 
        android:layout_toRightOf="@+id/textview1"
        android:layout_marginLeft="36dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_name"
        />
	
    <TextView
        android:id="@+id/textview2"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_mass" />
    
    <TextView
        android:id="@+id/dataview2"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview2"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_mass" />
	
    
    <TextView
        android:id="@+id/textview3"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_gravity"
        />
    
      <TextView
        android:id="@+id/dataview3"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview3"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_gravity" />
    
    <TextView
        android:id="@+id/textview4"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_colonies"
        />
    
      <TextView
        android:id="@+id/dataview4"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview4"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_colonies" />
    
    <TextView
        android:id="@+id/textview5"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_pop"
        />
    
      <TextView
        android:id="@+id/dataview5"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview5"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_pop" />
    
    <TextView
        android:id="@+id/textview6"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_military"
        />
    
    <TextView
        android:id="@+id/dataview6"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview6"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_military" />
    
    <TextView
        android:id="@+id/textview7"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_bases"
        />
    
      <TextView
        android:id="@+id/dataview7"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview7"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_bases" />
    <TextView
        android:id="@+id/textview8"
        android:textColor="#FFDDAA"
        android:layout_marginLeft="5dip"
        android:layout_below="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_protected"
        />
      <TextView
        android:id="@+id/dataview8"
        android:textColor="#FFFF99"
        android:layout_toRightOf="@+id/textview8"
        android:layout_alignStart="@+id/dataview1"
        android:layout_below="@+id/dataview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Planet_protected" />
     <ImageView 
         android:id="@+id/planetEffect"
         android:src="@drawable/anim_plasma_ring"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_below="@+id/textview8"
         android:contentDescription="@string/content_desc_earth"
         />
      
      <ImageView
          android:id="@+id/imageEarth"
          android:src="@drawable/earth"
          android:padding="24dp"
          android:background="#00000000"
          android:layout_marginLeft="1dp"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_below="@+id/textview8"
          android:contentDescription="@string/content_desc_earth" /> 
    
</RelativeLayout>
